--- a/.github/workflows/deploy_sis_app.yaml
+++ b/.github/workflows/deploy_sis_app.yaml
@@ -14,7 +14,7 @@ env:
   SNOWFLAKE_CONNECTIONS_MYCONNECTION_DATABASE: 'PLAYGROUND' # Add these secerts to github repository
   SNOWFLAKE_CONNECTIONS_MYCONNECTION_SCHEMA: 'DEV' # Add these secerts to github repository
   SNOWFLAKE_CONNECTIONS_MYCONNECTION_WAREHOUSE: 'DEMO_WH' # Add these secerts to github repository
-  SNOWFLAKE_CONNECTIONS_MYCONNECTION_ROLE: 'ACCOUNTADIM' # Add these secerts to github repository
+  SNOWFLAKE_CONNECTIONS_MYCONNECTION_ROLE: 'ACCOUNTADMIN' # Add these secerts to github repository
 
 jobs:
   snowflake-cli:
