--- a/.github/workflows/deploy_sis_app.yaml
+++ b/.github/workflows/deploy_sis_app.yaml
@@ -8,13 +8,13 @@ on:
   workflow_dispatch:
 
 env:
-  SNOWFLAKE_CONNECTIONS_MYCONNECTION_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }} # Add these secerts to github repository
-  SNOWFLAKE_CONNECTIONS_MYCONNECTION_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }} # Add these secerts to github repository
-  SNOWFLAKE_CONNECTIONS_MYCONNECTION_USER: ${{ secrets.SNOWFLAKE_USER }} # Add these secerts to github repository
-  SNOWFLAKE_CONNECTIONS_MYCONNECTION_DATABASE: 'PLAYGROUND' # Add these secerts to github repository
-  SNOWFLAKE_CONNECTIONS_MYCONNECTION_SCHEMA: 'DEV' # Add these secerts to github repository
-  SNOWFLAKE_CONNECTIONS_MYCONNECTION_WAREHOUSE: 'DEMO_WH' # Add these secerts to github repository
-  SNOWFLAKE_CONNECTIONS_MYCONNECTION_ROLE: 'ACCOUNTADMIN' # Add these secerts to github repository
+  SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }} # Add these secerts to github repository
+  SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }} # Add these secerts to github repository
+  SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }} # Add these secerts to github repository
+  SNOWFLAKE_DATABASE: 'PLAYGROUND' # Add these secerts to github repository
+  SNOWFLAKE_SCHEMA: 'DEV' # Add these secerts to github repository
+  SNOWFLAKE_WAREHOUSE: 'DEMO_WH' # Add these secerts to github repository
+  SNOWFLAKE_ROLE: 'ACCOUNTADMIN' # Add these secerts to github repository
 
 jobs:
   snowflake-cli:
