changing config.toml moving more to default settings

--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,1 @@
-[connections.myconnection]
-account = ""
-user = ""
-password = ""
-database = ""
-schema = ""
-warehouse = ""
-role = ""
+[connections.default]
